@@ -1,5 +1,8 @@
 # $Id$
 
+2005-10-31
+	* Added statfs sf.net patch 1344493
+
 2005-10-30
 	* Added tcp port monitor support (pkovacs)
 
